transaction record,supplier validation,pdf done!
