# bank/api/controllers/bank.js
@@ -6,7 +6,7 @@ module.exports = {
   accVerify: accVerify,
   balance: balance,
   send: send,
-  record: record
+  verify: verify
 };
 
 var con = mysql.createConnection({
@@ -54,24 +54,33 @@ function send(req, res) {
   var pin = req.body.Pin;
   var amnt = req.body.Amount;
   var tacc = req.body['To Account'];
+  var record = crypto.randomBytes(20).toString('hex');
   // console.log(facc, pin, amnt, tacc);
   con.query("UPDATE user SET balance=balance-"+amnt+" WHERE acc="+facc+" and pin="+pin, function (err, result) {
     if (err) throw err;
   });
   con.query("UPDATE user SET balance=balance+"+amnt+" WHERE acc="+tacc, function (err, result) {
     if (err) throw err;
-    res.json("1");
   });
-}
-
-function record(req, res) {
-  var amt = req.body.amt;
-  var acc = req.body.acc;
-  var record = crypto.randomBytes(20).toString('hex');
-  // console.log(record);
-  var str = "insert into transactions(acc,amount,record)values ("+acc+","+amt+",'"+record+"')";
+  var str = "insert into transactions(acc,to_acc,amount,record)values ("+facc+","+tacc+","+amnt+",'"+record+"')";
   con.query(str, function (err, result) {
     if (err) throw err;
     res.json(record);
+  });
+}
+
+function verify(req, res) {
+  var facc = req.body['From Account'];
+  var record = req.body.Record;
+  var amnt = req.body.Amount;
+  var tacc = req.body['To Account'];
+  con.query("SELECT id FROM transactions WHERE acc="+facc+" and record='"+record+"' and amount="+amnt+" and to_acc="+tacc, function (err, result) {
+    if (err)  throw err;
+    if(result.length==1) {
+        res.json("1"); 
+    } 
+    else {
+        res.json("0");
+    }
   });
 }
